[gd_scene load_steps=8 format=2]

[ext_resource path="res://Platformer/Enemies/Enemies.tscn" type="PackedScene" id=1]
[ext_resource path="res://Platformer/Enemies/Enemey sprite/MC_virus_sprite3.png" type="Texture" id=2]
[ext_resource path="res://Acessories/Scene/Grenade_launcher/Grenede_launcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://Platformer/Enemies/Grenade_enemy/Grenade_enemy.gd" type="Script" id=4]
[ext_resource path="res://Acessories/Weapon_bullet/Virus_bullet/Virus_bullet.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 59.2685

[sub_resource type="Animation" id=2]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[node name="Grenade_launcher" instance=ExtResource( 1 )]
position = Vector2( 170.413, 176.07 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )

[node name="RayCast2D" parent="Body" index="0"]
visible = false
position = Vector2( 70, 16 )

[node name="Grenede_launcher" parent="Body" index="1" instance=ExtResource( 3 )]
position = Vector2( 7.5, 28.9384 )
z_index = 1
grenade = ExtResource( 5 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="2"]
scale = Vector2( 1, 1 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/Shoot = SubResource( 2 )

[node name="reload_timer" type="Timer" parent="." index="6"]
wait_time = 1.5

[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
